--- a/style.css
+++ b/style.css
@@ -8,17 +8,11 @@ body {
     grid-template-areas: 'side top'
     'side bottom';
     gap: 10px;
-    width: auto;
-    height: auto;
 }
 
-.nav {
+.sidebar {
     grid-area: side;
     background-color: pink;
-}
-
-.content {
-
 }
 
 .top {
@@ -29,4 +23,14 @@ body {
 .bottom {
     grid-area: bottom;
     background-color: pink;
+}
+
+.content {
+
+}
+
+.page {
+    display: grid;
+    grid-template-areas: 'side top'
+    'side bottom';
 }
