--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
+/*
+===ELEMENTS CLASSES===
+*/
 
 body {
     margin: auto;
 }
 
-/*
-===ELEMENTS CLASSES===
-*/
+ul {
+    list-style-type: none;
+    padding: 0px;
+}
 
+.sidebar {
+    background-color: pink;
+}
 
+.content {
+    background-color: greenyellow;
+}
 
+.header {
+    background-color: lightblue;
+}
 
+.cardholder {
+    padding: 10px;
+}
 
+.card {
+    background-color: #ffffff;
+}
 
 /* 
 ===GRID ELEMENTS===
@@ -28,7 +47,10 @@ Sidebar Grid.
 */
 .sidebar {
     grid-area: sidebar;
-    background-color: pink;
+
+    display: grid;
+    /* Make a grid here for nav elements */
+
 }
 
 /*
@@ -36,7 +58,6 @@ Header Grid.
 */
 .header {
     grid-area: header;
-    background-color: lightblue;
 
     display: grid;
     grid-template-areas: 'top'
@@ -56,7 +77,6 @@ Main Content grid.
 */
 .content {
     grid-area: content;
-    background-color: greenyellow;
 
     display: grid;
     grid-template-areas: 'left left left right'
@@ -65,6 +85,12 @@ Main Content grid.
 
 .left {
     grid-area: left;
+}
+
+.cardholder {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
 }
 
 .right {
