--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     margin: auto;
+    background-color: lightgray;
 }
 
 ul {
@@ -12,15 +13,15 @@ ul {
 }
 
 .sidebar {
-    background-color: pink;
+    background-color: lightblue;
 }
 
-.content {
-    background-color: greenyellow;
+.content { 
+    
 }
 
 .header {
-    background-color: lightblue;
+    background-color: #ffffff;
 }
 
 .cardholder {
