--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 body {
     margin: auto;
+    height: auto;
+    width: auto;
     background-color: lightgray;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -59,15 +61,15 @@ ul {
     margin: 10px;
 }
 
-.cardholder {
-    height: 95%;
+.projects {
+
 }
 
-.card {
+.project {
     background-color: #ffffff;
 }
 
-.updateholder {
+.updates {
     height: 95%;
 }
 
@@ -75,11 +77,11 @@ ul {
 
 }
 
-.peopleholder {
+.people {
     
 }
 
-.people {
+.person {
 
 }
 
@@ -137,18 +139,18 @@ Content Grid
     grid-template: 100% / 75% 25%;
 }
 
-.cardholder {
+.projects {
     display: grid;
     grid-template: 30% 30% 30% / 50% 50%;
     gap: 10px;
 }
 
-.updateholder {
+.updates {
     display: grid;
     grid-template: 100% / 50% 50%;
     gap: 10px;
 }
 
-.peopleholder {
+.people {
 
 }
