--- a/style.css
+++ b/style.css
@@ -10,11 +10,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0px;
-}
-
 .sidebar {
     background-color: blue;
     height: auto;
@@ -29,11 +24,23 @@ ul {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-size: 35px;
+    font-size: 30px;
 }
 
 .logo img {
-    height: 50%;
+    height: 40%;
+    filter: invert(1);
+}
+
+nav a {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 20px;
+}
+
+nav img {
+    width: 15%;
     filter: invert(1);
 }
 
@@ -98,8 +105,6 @@ body {
 Header Grid.
 */
 .header {
-
-
     display: grid;
     grid-template-areas: 'top'
     'bottom';
@@ -109,8 +114,6 @@ Header Grid.
 Sidebar Grid.
 */
 .sidebar {
-
-
     display: grid;
     grid-template-rows: 10% 30% 60%;
 
