--- a/style.css
+++ b/style.css
@@ -4,31 +4,24 @@
 
 body {
     margin: auto;
-    height: auto;
-    width: auto;
     background-color: lightgray;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .sidebar {
     background-color: blue;
-    height: auto;
-    width: auto;
-    padding: 15px;
-    font-size: 30px;
-    font-weight: bold;
     color: #ffffff;
+    padding: 10px;
 }
 
 .logo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-size: 30px;
 }
 
 .logo img {
-    height: 40%;
+    height: 50px;
     filter: invert(1);
 }
 
@@ -37,11 +30,13 @@ nav a {
     justify-content: flex-start;
     align-items: center;
     font-size: 20px;
+    text-indent: 15px;
 }
 
 nav img {
-    width: 15%;
+    width: 30px;
     filter: invert(1);
+    margin-left: 10px;
 }
 
 .header {
@@ -115,8 +110,7 @@ Sidebar Grid.
 */
 .sidebar {
     display: grid;
-    grid-template-rows: 10% 30% 60%;
-
+    grid-template-rows: 10% 90%;
 }
 
 /*
