--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.sidebar {
+aside {
     background-color: blue;
-    color: #ffffff;
     padding: 10px;
 }
 
@@ -18,6 +17,7 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    color: #ffffff;
 }
 
 .logo img {
@@ -31,6 +31,12 @@ nav a {
     align-items: center;
     font-size: 20px;
     text-indent: 15px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+a[title="Settings"] {
+    margin-top: 20px;
 }
 
 nav img {
@@ -39,7 +45,7 @@ nav img {
     margin-left: 10px;
 }
 
-.header {
+header {
     background-color: #ffffff;
     height: auto;
     width: auto;
@@ -50,7 +56,7 @@ nav img {
     width: auto;
 }
 
-.content { 
+main { 
     height: auto;
     width: auto;
 }
@@ -99,16 +105,16 @@ body {
 /*
 Header Grid.
 */
-.header {
+header {
     display: grid;
     grid-template-areas: 'top'
     'bottom';
 }
 
 /*
-Sidebar Grid.
+Aside Grid.
 */
-.sidebar {
+aside {
     display: grid;
     grid-template-rows: 10% 90%;
 }
@@ -122,16 +128,9 @@ Container Grid
 }
 
 /*
-Header Grid
+Main Grid
 */
-.header {
-
-}
-
-/*
-Content Grid
-*/
-.content {
+main {
     display: grid;
     grid-template: 100% / 75% 25%;
 }
