--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 */
 
 body {
-    margin: auto;
+    margin: 0px;
     background-color: lightgray;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -47,18 +47,14 @@ nav img {
 
 header {
     background-color: #ffffff;
-    height: auto;
-    width: auto;
 }
 
-.container {
-    height: auto;
-    width: auto;
+header img {
+    height: 25px;
 }
 
 main { 
-    height: auto;
-    width: auto;
+
 }
 
 .right {
@@ -99,7 +95,7 @@ main {
 
 body {
     display: grid;
-    grid-template: 100% / 20% 80%;
+    grid-template: 1fr 6fr / 1fr 4fr;
 }
 
 /*
@@ -107,8 +103,7 @@ Header Grid.
 */
 header {
     display: grid;
-    grid-template-areas: 'top'
-    'bottom';
+    grid-template: 1fr 2fr / 7fr 1fr 1fr;
 }
 
 /*
@@ -116,15 +111,7 @@ Aside Grid.
 */
 aside {
     display: grid;
-    grid-template-rows: 10% 90%;
-}
-
-/*
-Container Grid
-*/
-.container {
-    display: grid;
-    grid-template: 30% 70%;
+    grid-row: 1/3;
 }
 
 /*
