--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ Header Grid.
 */
 header {
     display: grid;
-    grid-template: 1fr 2fr / 7fr 1fr 1fr;
+    grid-template: 1fr 1fr / 3fr 1fr;
 }
 
 /*
