--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
-/*
-===ELEMENTS CLASSES===
-*/
+/* General Styling */
 
 body {
     margin: 0px;
     background-color: lightgray;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    display: grid;
+    grid-template: 1fr 6fr / 1fr 4fr;
 }
+
+/*  Aside Styling   */
 
 aside {
     background-color: blue;
     padding: 10px;
+
+    display: grid;
+    grid-row: 1/3;
 }
 
 .logo {
@@ -45,12 +51,49 @@ nav img {
     margin-left: 10px;
 }
 
+/* Header Styling */
+
 header {
     background-color: #ffffff;
+
+    display: grid;
+    grid-template: 1fr 1fr / 3fr 1fr;
 }
 
 header img {
     height: 25px;
+}
+
+/* Main Styling */
+
+main {
+    display: grid;
+    grid-template: 100% / 75% 25%;
+}
+
+.title {
+    grid-column: 1 / -1;
+}
+
+.projects {
+    display: grid;
+
+    gap: 10px;
+
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: max-content;
+}
+
+.news {
+
+}
+
+.updates {
+
+}
+
+.people {
+
 }
 
 main { 
@@ -89,60 +132,4 @@ main {
 
 }
 
-/* 
-===GRID ELEMENTS===
-*/
 
-body {
-    display: grid;
-    grid-template: 1fr 6fr / 1fr 4fr;
-}
-
-/*
-Header Grid.
-*/
-header {
-    display: grid;
-    grid-template: 1fr 1fr / 3fr 1fr;
-}
-
-/*
-Aside Grid.
-*/
-aside {
-    display: grid;
-    grid-row: 1/3;
-}
-
-/*
-Main Grid
-*/
-main {
-    display: grid;
-    grid-template: 100% / 75% 25%;
-}
-
-.title {
-    grid-column: 1 / -1;
-}
-
-.projects {
-    display: grid;
-
-    gap: 10px;
-
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: max-content;
-}
-
-.news {
-
-}
-
-.updates {
-
-}
-
-.people {
-
-}
