--- a/style.css
+++ b/style.css
@@ -2,24 +2,25 @@
 
 body {
     margin: 0px;
-    background-color: lightgray;
+    background-color: #E2E8F0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     display: grid;
-    grid-template: 1fr 6fr / 1fr 4fr;
+    grid-template: 1fr 6fr / 1fr 6fr;
 }
 
 /*  Aside Styling   */
 
 aside {
-    background-color: blue;
-    padding: 10px;
+    background-color: #1992D4;
+    padding: 20px 0px 0px 20px;
 
     display: grid;
     grid-row: 1/3;
 }
 
 .logo {
+    font-size: 25px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -57,11 +58,20 @@ header {
     background-color: #ffffff;
 
     display: grid;
-    grid-template: 1fr 1fr / 3fr 1fr;
+    grid-template: 1fr 1fr / 2fr 1fr;
 }
 
 header img {
     height: 25px;
+}
+
+.actions button {
+    color: #ffffff;
+
+    height: 50%;
+    width: 30%;
+    border-radius: 25px;
+    background-color: #1992D4;
 }
 
 /* Main Styling */
@@ -87,6 +97,7 @@ main {
 
 .project {
     background-color: #ffffff;
+    border-left: #F0B429;
 }
 
 .annoucements {
