--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@ aside {
 
 .logo {
     font-size: 25px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
     color: #ffffff;
+
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    justify-items: start;
+    align-items: center;
 }
 
 .logo img {
@@ -33,13 +35,15 @@ aside {
 }
 
 nav a {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
     font-size: 20px;
     text-indent: 15px;
     text-decoration: none;
     color: #ffffff;
+
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    justify-items: start;
+    align-items: center;
 }
 
 a[title="Settings"] {
@@ -59,6 +63,8 @@ header {
 
     display: grid;
     grid-template: 1fr 1fr / 2fr 1fr;
+    align-items: center;
+    justify-items: stretch;
 }
 
 header img {
@@ -67,9 +73,9 @@ header img {
 
 .actions button {
     color: #ffffff;
-
-    height: 50%;
-    width: 30%;
+    border: 0;
+    height: 40px;
+    width: 120px;
     border-radius: 25px;
     background-color: #1992D4;
 }
