--- a/style.css
+++ b/style.css
@@ -60,9 +60,11 @@ nav img {
 
 header {
     background-color: #ffffff;
+    padding-bottom: 10px;
+    box-shadow: 0px 6px 10px #bcbcbc;
 
     display: grid;
-    grid-template: 1fr 1fr / 2fr 1fr;
+    grid-template: 1fr 1fr / 3fr 2fr;
     align-items: center;
     justify-items: stretch;
     
@@ -78,6 +80,10 @@ header {
     padding-right: 10px;
 }
 
+.search img {
+    width: 25px;
+}
+
 .searchbar {
     width: 100%;
     overflow: hidden;
@@ -90,6 +96,10 @@ header {
     display: grid;
     grid-template-columns: 2fr 1fr 2fr;
     align-items: center;
+}
+
+.notification img {
+    width: 25px;
 }
 
 .notification .right {
@@ -107,8 +117,27 @@ header {
     justify-items: left;
 }
 
-header img {
-    height: 25px;
+.welcome {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    align-items: center;
+}
+
+.welcome p {
+    font-weight: bold;
+    margin-bottom: 0px;
+}
+
+.welcome h2 {
+    margin-top: 0px;
+}
+
+.welcome img {
+    height: 100px;
+    padding-left: 75px;
+
+    display: grid;
+    justify-items: center;
 }
 
 .actions button {
@@ -134,8 +163,8 @@ main {
 .projects {
     padding: 10px;
 
-    grid-row: 1 / span 2;
     display: grid;
+    grid-row: 1 / span 2;
     gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: max-content;
