--- a/style.css
+++ b/style.css
@@ -176,7 +176,9 @@ main {
 }
 
 .buttons button {
-    height: 50px;
+    width: 35px;
+    background-color: #ffffff00;
+    border: none;
 }
 
 .annoucements {
